# MemoryGame

./: .gitignore  CMakeLists.txt  DETAILED_PLAN.md  README.md  run_game.sh
assets/fonts/: README.md
assets/manifest/: cards.json  sources.json
src/: main.cpp
tools/: fetch_assets.py  populate_sources_wookieepedia.py  process_assets.py
